Final set of changes following Johanna Gramling's comments.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@298 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -83,7 +83,8 @@
       SLACcitation   = "%%CITATION = ARXIV:1310.4491;%%",
 }
 
-@techreport{ATL-PHYS-PUB-2014-007,
+@article{ATL-PHYS-PUB-2014-007,
+      author        = "{ATLAS Collaboration}",
       title         = "{Sensitivity to WIMP Dark Matter in the Final States
                        Containing Jets and Missing Transverse Momentum with the
                        ATLAS Detector at 14 TeV LHC}",
@@ -95,6 +96,7 @@
       reportNumber  = "ATL-PHYS-PUB-2014-007",
       url           = "https://cds.cern.ch/record/1708859",
 }
+
 
 
 %%%%%%%%%%%%%%%%EFT references
@@ -284,112 +286,6 @@
       SLACcitation   = "%%CITATION = ARXIV:1501.00907;%%",
 }
 
-%%%%%%%%%%%%%%%%EW models, experimental searches
-
-%%%ATLAS
-@article{Aad:2013oja,
-      title          = "{Search for dark matter in events with a hadronically
-                        decaying W or Z boson and missing transverse momentum in
-                        $pp$ collisions at $\sqrt{s} =$ 8 TeV with the ATLAS
-                        detector}",
-      collaboration  = "ATLAS",
-      journal        = "Phys.Rev.Lett.",
-      number         = "4",
-      volume         = "112",
-      pages          = "041802",
-      doi            = "10.1103/PhysRevLett.112.041802",
-      year           = "2014",
-      eprint         = "1309.4017",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-PH-EP-2013-158",
-      SLACcitation   = "%%CITATION = ARXIV:1309.4017;%%",
-}
-
-@article{Aad:2014vka,
-      title          = "{Search for dark matter in events with a Z boson and
-                        missing transverse momentum in pp collisions at
-                        $\sqrt{s}$=8 TeV with the ATLAS detector}",
-      collaboration  = "ATLAS",
-      journal        = "Phys.Rev.",
-      number         = "1",
-      volume         = "D90",
-      pages          = "012004",
-      doi            = "10.1103/PhysRevD.90.012004",
-      year           = "2014",
-      eprint         = "1404.0051",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-PH-EP-2013-231",
-      SLACcitation   = "%%CITATION = ARXIV:1404.0051;%%",
-}
-
-@article{Aad:2014tda,
-      author         = "Aad, Georges and others",
-      title          = "{Search for new phenomena in events with a photon and
-                        missing transverse momentum in $pp$ collisions at
-                        $\sqrt{s}=8$ TeV with the ATLAS detector}",
-      collaboration  = "ATLAS",
-      journal        = "Phys.Rev.",
-      number         = "1",
-      volume         = "D91",
-      pages          = "012008",
-      doi            = "10.1103/PhysRevD.91.012008",
-      year           = "2015",
-      eprint         = "1411.1559",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-PH-EP-2014-245",
-      SLACcitation   = "%%CITATION = ARXIV:1411.1559;%%",
-}
-
-
-
-@article{ATLAS:2014wra,
-      author         = "Aad, Georges and others",
-      title          = "{Search for new particles in events with one lepton and
-                        missing transverse momentum in $pp$ collisions at
-                        $\sqrt{s}$ = 8 TeV with the ATLAS detector}",
-      collaboration  = "ATLAS",
-      journal        = "JHEP",
-      volume         = "1409",
-      pages          = "037",
-      doi            = "10.1007/JHEP09(2014)037",
-      year           = "2014",
-      eprint         = "1407.7494",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-PH-EP-2014-139",
-      SLACcitation   = "%%CITATION = ARXIV:1407.7494;%%",
-}
-
-%%%CMS
-
-@article{Khachatryan:2014rwa,
-      title          = "{Search for new phenomena in monophoton final states in
-                        proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
-      collaboration  = "CMS",
-      year           = "2014",
-      eprint         = "1410.8812",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CMS-EXO-12-047, CERN-PH-EP-2014-253",
-      SLACcitation   = "%%CITATION = ARXIV:1410.8812;%%",
-}
-
-@article{Khachatryan:2014tva,
-      author         = "Khachatryan, Vardan and others",
-      title          = "{Search for physics beyond the standard model in final
-                        states with a lepton and missing transverse energy in
-                        proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
-      collaboration  = "CMS",
-      year           = "2014",
-      eprint         = "1408.2745",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CMS-EXO-12-060, CERN-PH-EP-2014-176",
-      SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
-}
 
 @article{Papucci:2014iwa,
       author         = "Papucci, Michele and Vichi, Alessandro and Zurek, Kathryn
@@ -552,20 +448,6 @@
       SLACcitation   = "%%CITATION = ARXIV:1307.2253;%%",
 }
 
-@article{Aad:2015zva,
-      author         = "Aad, Georges and others",
-      title          = "{Search for new phenomena in final states with an
-                        energetic jet and large missing transverse momentum in pp
-                        collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}",
-      collaboration  = "ATLAS",
-      year           = "2015",
-      eprint         = "1502.01518",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-PH-EP-2014-299",
-      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%",
-}
-
 @article{Racco:2015dxa,
       author         = "Racco, Davide and Wulzer, Andrea and Zwirner, Fabio",
       title          = "{Robust collider limits on heavy-mediator Dark Matter}",
@@ -698,20 +580,10 @@
       SLACcitation   = "%%CITATION = ARXIV:1202.5653;%%",
 }
 
-@article{CMSmonotop,
-      title         = "{Search for new physics with monotop final states in $pp$
-                       collisions at $\sqrt{s} = 8$ TeV}",
-      institution   = "CERN",
-      collaboration = "CMS Collaboration",
-      address       = "Geneva",
-      report        = "CMS-PAS-B2G-12-022",
-      year          = "2014",
-      url           = "http://cds.cern.ch/record/1668115/",
-}
 
 
 @article{Khachatryan:2014uma,
-      author         = "Khachatryan, V. and others",
+      author         = "{CMS Collaboration}",
       title          = "{Search for Monotop Signatures in Proton-Proton
                         Collisions at $\sqrt s =$ 8 TeV}",
       collaboration  = "CMS",
@@ -729,17 +601,23 @@
   }
 
 
-@article{ATLASmonotop,
-      title          = "{Search for a single-top quark produced in association with missing energy in proton-proton collisions at $\sqrt{s}=\mathrm{8~TeV}$  with the ATLAS detector}",
-      collaboration  = "ATLAS Collaboration",
-      journal        = "Eur.\ Phys. J.\ C",
-      volume         = "75:79",
-      pages          = "",
+@article{Aad:2014wza,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Search for invisible particles produced in association
+                        with single-top-quarks in proton-proton collisions at
+                        $\sqrt{s}$ = 8 TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Eur.Phys.J.",
+      number         = "2",
+      volume         = "C75",
+      pages          = "79",
       doi            = "10.1140/epjc/s10052-014-3233-4",
       year           = "2015",
       eprint         = "1410.5404",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-231",
+      SLACcitation   = "%%CITATION = ARXIV:1410.5404;%%",
 }
 
 
@@ -1138,24 +1016,6 @@
       primaryClass   = "astro-ph.HE",
       reportNumber   = "FERMILAB-PUB-14-032-A, MIT-CTP-4533",
       SLACcitation   = "%%CITATION = ARXIV:1402.6703;%%",
-}
-@article{Aad:2014vea,
-      author         = "Aad, G. and others",
-      title          = "{Search for dark matter in events with heavy quarks and
-                        missing transverse momentum in $pp$ collisions with the
-                        ATLAS detector}",
-      collaboration  = "ATLAS",
-      journal        = "Eur.Phys.J.",
-      number         = "2",
-      volume         = "C75",
-      pages          = "92",
-      doi            = "10.1140/epjc/s10052-015-3306-z",
-      year           = "2015",
-      eprint         = "1410.4031",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-PH-EP-2014-229",
-      SLACcitation   = "%%CITATION = ARXIV:1410.4031;%%",
 }
 
 @article{Agrawal:2014aoa,
@@ -2015,12 +1875,29 @@
 %%%%%%%%%%%%%%%%monojet
 
 
+@article{Aad:2015zva,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Search for new phenomena in final states with an
+                        energetic jet and large missing transverse momentum in pp
+                        collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "arXiv:1502.01518 [hep-ex], Submitted to Eur.Phys.J. C",
+      year           = "2015",
+      eprint         = "1502.01518",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-299",
+      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%",
+}
+
+
 @article{Khachatryan:2014rra,
-	collaboration         = "CMS",
+        author         = "{CMS Collaboration}",
 	title          = "{Search for dark matter, extra dimensions, and
 	unparticles in monojet events in proton-proton collisions
 	at $\sqrt{s}$ = 8 TeV}",
 	collaboration  = "CMS",
+	journal        = "arXiv:1408.3583 [hep-ex], Submitted to Eur.Phys.J. C",
 	year           = "2014",
 	eprint         = "1408.3583",
 	archivePrefix  = "arXiv",
@@ -2031,6 +1908,7 @@
 
 
 @article{CMS-PAS-B2G-13-004,
+        author         = "{CMS Collaboration}",
 	title         = "{Search for the Production of Dark Matter in Association
 	with Top Quark Pairs in the Di-lepton Final State in pp
 	collisions at $\sqrt{s} = 8$ TeV}",
@@ -2044,10 +1922,24 @@
 	url           = "http://cds.cern.ch/record/1697173",
 }
 
+@article{CMS-PAS-EXO-14-004,
+        author         = "{CMS Collaboration}",
+	title         = "{Search for dark matter direct production using razor variables in events with two or more jets in pp collisions at 8 TeV}",
+	institution   = "CERN",
+	collaboration = "CMS",
+	address       = "Geneva",
+	month         = "Mar",
+	year          = "2015",
+	note    = "\href{https://cds.cern.ch/record/2002861}{CMS-PAS-EXO-14-004}",
+	reportNumber  = "CMS-PAS-EXO-14-004",
+	url           = "http://cds.cern.ch/record/2002861",
+}
+
 %%%%%%%%%%%%%%%%EW models, experimental searches
 
 %%%ATLAS
 @article{Aad:2013oja,
+        author         = "{ATLAS Collaboration}",
 	title          = "{Search for dark matter in events with a hadronically
 	decaying W or Z boson and missing transverse momentum in
 	$pp$ collisions at $\sqrt{s} =$ 8 TeV with the ATLAS
@@ -2067,6 +1959,7 @@
 }
 
 @article{Aad:2014vka,
+        author         = "{ATLAS Collaboration}",
 	title          = "{Search for dark matter in events with a Z boson and
 	missing transverse momentum in pp collisions at
 	$\sqrt{s}$=8 TeV with the ATLAS detector}",
@@ -2087,6 +1980,7 @@
 
 
 @article{ATLAS:2014wra,
+        author         = "{ATLAS Collaboration}",
 	collaboration         = "ATLAS",
 	title          = "{Search for new particles in events with one lepton and
 	missing transverse momentum in $pp$ collisions at
@@ -2103,12 +1997,34 @@
 	SLACcitation   = "%%CITATION = ARXIV:1407.7494;%%",
 }
 
+
+@article{Aad:2014tda,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Search for new phenomena in events with a photon and
+                        missing transverse momentum in $pp$ collisions at
+                        $\sqrt{s}=8$ TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys.Rev.",
+      number         = "1",
+      volume         = "D91",
+      pages          = "012008",
+      doi            = "10.1103/PhysRevD.91.012008",
+      year           = "2015",
+      eprint         = "1411.1559",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-245",
+      SLACcitation   = "%%CITATION = ARXIV:1411.1559;%%",
+}
+
 %%%CMS
 
 @article{Khachatryan:2014rwa,
+        author         = "{CMS Collaboration}",
 	title          = "{Search for new phenomena in monophoton final states in
 	proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
 	collaboration  = "CMS",
+	journal        = "arXiv:1410.8812 [hep-ex], Submitted to Phys.Lett. B",
 	year           = "2014",
 	eprint         = "1410.8812",
 	archivePrefix  = "arXiv",
@@ -2118,26 +2034,32 @@
 }
 
 @article{Khachatryan:2014tva,
-	collaboration  = "CMS",
-	title          = "{Search for physics beyond the standard model in final
-	states with a lepton and missing transverse energy in
-	proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
-	collaboration  = "CMS",
-	year           = "2014",
-	eprint         = "1408.2745",
-	archivePrefix  = "arXiv",
-	primaryClass   = "hep-ex",
-	reportNumber   = "CMS-EXO-12-060, CERN-PH-EP-2014-176",
-	SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
+      author         = "{CMS Collaboration}",
+      title          = "{Search for physics beyond the standard model in final
+                        states with a lepton and missing transverse energy in
+                        proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys.Rev.",
+      number         = "9",
+      volume         = "D91",
+      pages          = "092005",
+      doi            = "10.1103/PhysRevD.91.092005",
+      year           = "2015",
+      eprint         = "1408.2745",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-12-060, CERN-PH-EP-2014-176",
+      SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
 }
-
 %%% ttbar+MET
 
 @article{Khachatryan:2015nua,
+        author         = "{CMS Collaboration}",
 	title          = "{Search for the production of dark matter in association
 	with top-quark pairs in the single-lepton final state in
 	proton-proton collisions at sqrt(s) = 8 TeV}",
 	collaboration  = "CMS",
+	journal        = "arXiv:1504.03198 [hep-ex], Submitted to JHEP",
 	year           = "2015",
 	eprint         = "1504.03198",
 	archivePrefix  = "arXiv",
@@ -2149,6 +2071,7 @@
 %%DM+HF
 
 @article{Aad:2014vea,
+        author         = "{ATLAS Collaboration}",
 	title          = "{Search for dark matter in events with heavy quarks and
 	missing transverse momentum in $pp$ collisions with the
 	ATLAS detector}",
@@ -2194,6 +2117,8 @@
 	reportNumber   = "CMS-EXO-12-050, CERN-PH-EP-2014-261",
 	SLACcitation   = "%%CITATION = ARXIV:1411.2646;%%",
 }
+
+%%% END OF ATLAS/CMS EXPERIMENTAL PAPERS
 
 @article{D'Eramo:2014aba,
 	author         = "D'Eramo, Francesco and Procura, Massimiliano",
