--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -30,7 +30,7 @@ called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:201
 This type of reaction includes the production of a Higgs boson that
 decays to pairs of dark matter particles.
 
-Early Run-1 searches for \MET{}+X signatures at ATLAS and CMS employed
+Early Run-1 searches for \MET{}+X signatures at ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007} and CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004} employed
 a basis of contact interaction operators in 
 effective field theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to
 calculate the possible signals.
