--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -39,7 +39,7 @@ The nature of the model is not conducive to a simple scaling behavior that would
 
 A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit, e.g. $g=0.5,1,2,3$. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
 
-A scan of Dark Matter and mediator masses should be done in the on-shell region $\MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
+A scan of Dark Matter and mediator masses should be done in the on-shell region $\MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be probed with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \MPhi. 
 
 %  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
 %  \item $\MPhi=10-1300$ with a binning of 100 GeV;
@@ -57,7 +57,7 @@ A scan of Dark Matter and mediator masses should be done in the on-shell region 
       \centering 
       \includegraphics[scale=0.32]{figures/bFDM/bfdm_relic/Njets.eps}
     \end{minipage}
-    \caption{MET (left) and jet multiplicity (right) for various DM and mediator masses and couplings normalized to the relic density observed in the early universe. \label{fig:relic}}
+    \caption{\MET (left) and jet multiplicity (right) for various DM and mediator masses and couplings normalized to the relic density observed in the early universe. \label{fig:relic}}
 \end{figure}
 
 \begin{figure}[h!]
@@ -70,7 +70,7 @@ A scan of Dark Matter and mediator masses should be done in the on-shell region 
       \centering 
       \includegraphics[scale=0.32]{figures/bFDM/bfdm_35_500/Njets.eps}
     \end{minipage}
-    \caption{MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$ \label{fig:g_comp}}
+    \caption{\MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$ \label{fig:g_comp}}
 \end{figure}
 
 %The following benchmark points could be produced as a starting point for the parameter space for this model:
