Small fixes in the introduction.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@299 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1865,7 +1865,7 @@
 
 @misc{DMatLHCProceedings,
 	author = "DM@LHC participants",
-	title = "DM@LHC 2014 proceedings",
+	title = "{DM@LHC 2014 proceedings}",
 	note = "To appear",
 	}
 	
