--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -25,18 +25,18 @@ with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% could be produced in association with dark matter.
 Such reactions, which are
 observed at colliders as particles or jets recoiling against an invisible state, are
-called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}.
+called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}, where \MET is the missing transverse momentum observable in the detector.
 \Todo{CD: why singling out mono-Higgs?}
 This type of reaction includes the production of a Higgs boson that
 decays to pairs of dark matter particles.
 
-Early Run-1 searches for \MET{}+X signatures at ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007} and CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004} employed
+Early LHC Run-1 searches for \MET{}+X signatures at ATLAS~\cite{Aad:2015zva,Aad:2014tda,ATLAS:2014wra,Aad:2014vka,Aad:2013oja,Aad:2014wza,Aad:2014vea,ATL-PHYS-PUB-2014-007} and CMS~\cite{Khachatryan:2014rra,Khachatryan:2014rwa,Khachatryan:2014tva,Khachatryan:2014uma,Khachatryan:2015nua,CMS-PAS-B2G-13-004,CMS-PAS-EXO-14-004} employed
 a basis of contact interaction operators in 
 effective field theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to
 calculate the possible signals.
 \Todo{Check these references here}
 These particular EFTs assume that production of dark matter takes place through
-a contact interaction involving a quark-antiquark pair or two gluons and
+a contact interaction involving a quark-antiquark pair or two gluons, and
 two dark matter particles.  In this case,
 the missing
 energy distribution of the signal is determined
@@ -48,13 +48,12 @@ of EFTs with different spin structures. Provided that the contact
 interaction approximation holds, these EFTs can also provide a
 straightforward way to compare the results from different collider
 searches with non-collider searches for dark matter.  
-From the time of their proposal however it was clear that,
+From the time of their proposal, however, it was clear that,
  though the contact interactions provide interesting limits, 
  they are not always a good description of dark matter production 
  at the LHC in the regime of interest~\cite{Goodman:2010yf,Shoemaker:2011vi}. 
 
-\Todo{Add experimental references if not done before}
-The interpretation of Tevatron~\ref{Aaltonen:2012jb} and Run-1 LHC~\ref{} searches
+The interpretation of Tevatron~\cite{Aaltonen:2012jb} and Run-1 LHC searches
 as constraints on contact interactions
 provided results that were outside the range of applicability of the EFT
 description, requiring further study~\cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
@@ -65,7 +64,8 @@ an extension to the EFT approach.
 Many proposals for such models have emerged (see, for example
 Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:2013xka,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa,Bai:2012xg,Carpenter:2012rg,Bell:2012rg,Petrov:2013nia,Carpenter:2013xra}). 
 %TODO CD: MONSTERCITE! Probably should be split. 
-These model introduce a new particle -- a mediator -- that allows
+%SL: I think it's fine...
+These models introduce a new particle -- a mediator -- that allows
 interactions between SM and DM particles.
 In the limit of large mediator mass, these simplified models map onto
 EFT operators.
@@ -78,7 +78,7 @@ EFT operators.
 %theories).
 %Such particles can mediate reactions that produce dark matter
 %particles.
-If the mass of the mediator is light, the kinematics of the
+If the mass of the mediator is small, the kinematics of the
 dark matter production can differ substantially from that due to a contact
 interaction, modifying limits and possibly requiring new search strategies.
 Appropriate simplified models can be used both to
@@ -163,20 +163,20 @@ heavily on a large body of existing theoretical work which made this
 assumption. Different types of dark matter particles will typically
 give similar results.
 Some exceptions exist:  the choice of Dirac fermions forbids some
-processes that are allowed for Majorana fermions~\ref{Goodman:2010yf}.
+processes that are allowed for Majorana fermions~\cite{Goodman:2010yf}.
 Aside from this, the cases
-of Dirac or Majorana fermions or scalars produces only minor changes
+of Dirac or Majorana fermions or scalars produce only minor changes
 in the kinematic distributions of the visible particle, especially
 when considering cut-and-count\sidenote{Cut-and-count refers to an analysis
 that applies a certain event selection and checks the inclusive number of events which pass. 
-This is to be contrasted with a shape analysis that compares the distribution of events.} analysis. Thus the choice of Dirac
+This is to be contrasted with a shape analysis, which compares the distribution of events.} analysis. Thus the choice of Dirac
 fermion dark matter is deemed sufficient for the benchmarks aiding the
 design of the upcoming Run-2 searches. Nevertheless, a more complete
 set of models will certainly be required upon a discovery; see
 e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva} for some
 studies of observables that may distinguish amongst these models.
 
-Simplified models are considered in depth within this report as a strength of collider experiments lies in the ability to
+Simplified models are considered in depth within this report since a strength of collider experiments lies in the ability to
 study the mediator, not just the DM. A discovery of an
 anomalous \MET signature
 at the LHC would not uniquely imply discovery of dark matter, while at
@@ -215,7 +215,7 @@ width. We forbid any further decays to other invisible particles of
 the Dark Sector that may increase the width or produce striking, visible signatures. 
 Studies within the Forum
 show that, for cut-and-count analyses, the kinematic distributions of
-many models and therefore the sensitivity of the search do not depend
+many models, and therefore the sensitivity of the search, do not depend
 significantly on the mediator width, as long as the width remains smaller
 than the mass of the particle.
 
@@ -243,7 +243,7 @@ it leads to benchmarks that are easily comparable across channels.
 %of dark matter.  
 Contact interaction operators have been outlined as a complete series of theoretical
 building blocks representing possible types of interactions between SM and DM particles
-in~\cite{Goodman:2010ku}. The approach followed by LHC searches (see e.g. Refs.~\ref{Khachatryan:2014rra,Aad:2015zva} 
+in~\cite{Goodman:2010ku}. The approach followed by LHC searches (see e.g. Refs.~\cite{Khachatryan:2014rra,Aad:2015zva} 
 for the most recent jet+\MET{} Run-1 searches with the 8 TeV dataset) 
 so far has been to simulate only a prioritized set of the possible operators with distinct kinematics
 for the interpretation of the constraints obtained, and provide results to be reinterpreted in terms of the other operators.
@@ -258,7 +258,7 @@ of scenarios where the mediating scale is not as large.
 Secondly, this report considers specific EFT benchmarks 
 whenever neither a simplified model completion 
 nor other simplified models yielding similar kinematic distributions are available. 
-This is the case for dimension 5 or dimension 7 operators with direct 
+This is the case for dimension-5 or dimension-7 operators with direct 
 Dark Matter-electroweak boson couplings. 
 Considering these models as separate experimental benchmarks 
 will allow to target new signal regions and help validate the 
@@ -291,7 +291,7 @@ boson ($W/Z/\gamma/H$). In this case, both
 simplified models leading to mono-boson signatures
 and contact interaction operators are considered. 
 Chapter \ref{sec:EFTValidity} is devoted to the treatment of the presentation of results for the benchmark
-models from contact interaction operators. Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. Chapter \ref{sec:conclusions} concludes the report.
+models from contact interaction operators. Chapter \ref{sec:TheoryUncertainties} prescribes how to estimate theoretical uncertainties on the simulation of these models. Chapter \ref{chapter:conclusions} concludes the report.
 Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
 %The Appendices also collect information about the implementation of the
